# epi-netrate

./: .gitignore  README.md  pyproject.toml  requirements-linux.txt
data/processed/: higgs_rt_cascades_test.csv  higgs_rt_cascades_tiny.csv  higgs_rt_subset.csv  (+2 more)
epi_netrate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
epinet/: __init__.py  baseline.py  datasets.py  epi_pairwise.py  paths.py
netrate_legacy/: netrate_infer.py  utils_netrate.py  visualize_netrate_vs_true.py
outputs/: higgs_all_interaction_cascades.csv  higgs_rt_cascades.csv  higgs_rt_cascades_11_20_top20.csv  higgs_rt_cascades_11_20_top50.csv  higgs_rt_cascades_21_50_top20.csv  higgs_rt_cascades_21_50_top50.csv  higgs_rt_cascades_moderate20.csv  higgs_rt_inferred_11_20_top20.csv  higgs_rt_inferred_11_20_top50.csv  higgs_rt_inferred_21_50_top20.csv  higgs_rt_inferred_21_50_top50.csv  higgs_rt_mt_cascades.csv  higgs_rt_re_cascades.csv  higgs_rt_re_mt_cascades.csv  higgs_rt_subset_inferred.csv  higgs_social_1hop_precision_at_k.csv  higgs_social_2hop_precision_at_k.csv
scripts/: evaluate_higgs_inference.py  make_higgs_subset_cascades.py  make_moderate_cascades.py  make_toy_cascades.py  plot_higgs_network_collision.py  plot_higgs_network_collision_activity.py  plot_higgs_network_overlay.py  plot_higgs_rt_overlay_graph.py  run_higgs_epi_pairwise.py  run_higgs_experiment_grid.py  run_higgs_subset_baseline.py  run_toy_baseline.py  smoke_call_baseline.py  smoke_test.py  smoke_test_netrate.py  test_higgs_cascades.py  visualize_higgs_rt_proxy_vs_inferred.py  visualize_toy_true_vs_netrate.py
(+3 files in other folders)
