[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "epi-netrate"
version = "0.1.0"
description = "NetRate-style diffusion network inference utilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "networkx",
  "matplotlib",
  "tqdm",
  "pyyaml",
  "cvxpy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["epinet*", "netrate_legacy*"]